--- a/index.html
+++ b/index.html
@@ -5,10 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>12bool</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/framework.css">
 </head>
 <body>
     <main>
-        
+
+        <!-- Prima riga -->
+        <div>
+            <div class="row uno">
+                <div id="container-one">
+
+                </div>
+            </div>
+        </div>
+
+        <!-- Seconda riga -->
+        <div>
+            <div class="row due">
+                <div id="container-two">
+
+                </div>
+            </div>
+        </div>
+
+        <!-- Terza riga -->
+        <div>
+            <div class="row tre">
+                <div id="container-three">
+
+                </div>
+            </div>
+        </div>
+
+        <!-- Quarta riga -->
+        <div>
+            <div class="row quattro">
+                <div id="container-four">
+
+                </div>
+            </div>
+        </div>
+
+        <!-- Quinta riga -->
+        <div>
+            <div class="row cinque">
+                <div id="container-five">
+
+                </div>
+            </div>
+        </div>
+
     </main>
 </body>
 </html>
