add 4 riquadri su 5

--- a/index.html
+++ b/index.html
@@ -16,10 +16,65 @@
             <div class="container-one">
                 <div class="row">
                     <div class="col-xs-1">
-                        <div class="box uno"></div>
+                        <div class="box uno">
+                            1 col
+                        </div>
                     </div>
                     <div class="col-xs-1">
-                        <div class="box uno"></div>
+                        <div class="box uno">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-xs-1">
+                        <div class="box uno">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-xs-1">
+                        <div class="box uno">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-xs-1">
+                        <div class="box uno">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-xs-1">
+                        <div class="box uno">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-xs-1">
+                        <div class="box uno">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-xs-1">
+                        <div class="box uno">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-xs-1">
+                        <div class="box uno">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-xs-1">
+                        <div class="box uno">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-xs-1">
+                        <div class="box uno">
+                            1 col
+
+                        </div>
+                    </div>
+                    <div class="col-xs-1">
+                        <div class="box uno">
+                            1 col
+                        </div>
                     </div>
                 </div>
             </div>
@@ -30,7 +85,9 @@
             <div class="container-two">
                 <div class="row">
                     <div class="col-xs-12">
-                        <div class="box due"></div>
+                        <div class="box due">
+                            12 col
+                        </div>
                     </div>
                 </div>
             </div>
@@ -41,13 +98,19 @@
             <div class="container-three">
                 <div class="row">
                     <div class="col-xs-8">
-                        <div class="box tre"></div>
+                        <div class="box tre">
+                            8 col
+                        </div>
                     </div>
                     <div class="col-xs-2">
-                        <div class="box tre"></div>
+                        <div class="box tre">
+                            2 col
+                        </div>
                     </div>
                     <div class="col-xs-2">
-                        <div class="box tre"></div>
+                        <div class="box tre">
+                            2 col
+                        </div>
                     </div>
                 </div>
             </div>
@@ -57,8 +120,30 @@
         <section>
             <div class="container-four">
                 <div class="row">
-                    <div class="col-xs-4">
-                        <div class="box quattro"></div>
+                    <div class="col-xs-1">
+                        <div class="box quattro">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-xs-2">
+                        <div class="box quattro">
+                            2 col
+                        </div>
+                    </div>
+                    <div class="col-xs-2">
+                        <div class="box quattro">
+                            2 col
+                        </div>
+                    </div>
+                    <div class="col-xs-6">
+                        <div class="box quattro">
+                            6 col
+                        </div>
+                    </div>
+                    <div class="col-xs-1">
+                        <div class="box quattro">
+                            1 col
+                        </div>
                     </div>
                 </div>
             </div>
